feat: add background image and write middleware

--- a/server/views/404.ejs
+++ b/server/views/404.ejs
@@ -29,7 +29,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: url(./public/page-404.jpeg) no-repeat center center / cover;
+      background: url(./404/page-404.jpeg) no-repeat center center / contain;
     }
   </style>
 </body>
