--- a/server/views/404.ejs
+++ b/server/views/404.ejs
@@ -10,7 +10,7 @@
 
 <body>
 
-  <div class="page-404"></div>
+  <a href="/" class="page-404"></a>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" />
